<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/ssid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_ssid" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:layout_marginTop="20dip"
        android:hint="@string/hint_password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/initialize" />

        <Button
            android:id="@+id/autoconnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_connect" />
    </LinearLayout>

</LinearLayout>